# routes/api.php
@@ -18,11 +18,23 @@ Route::namespace('API')->group(function () {
     // Authentication Routes...
     Route::post('login', 'APIAuthController@login');
 
+    // Schedule Attend
+    Route::post('attend', 'APIScheduleAttendController@store');
+
     Route::middleware('auth.api')->group(function (){
         // user data ..
         Route::get('profile', 'APIAuthController@profile');
 
         // schedule
         Route::resource('schedule', 'APIScheduleController');
+
+        // Schedule Attend
+        Route::get('attend', 'APIScheduleAttendController@index');
+
+        // Schedule Change
+        Route::get('scheduleChange', 'APIScheduleChangeController@index');
+
+        // notification
+        Route::resource('notification', 'APINotificationController')->only(['index']);
     });
 });
